<resources>
    <string name="enable_extension">enableExtension</string>
    <string name="disable_extension">disableExtension</string>
    <string name="init_extension">initExtension</string>
    <string name="set_composer">setBeautyMode</string>
    <string name="set_sticker">setBeauty</string>
    <string name="face_num">face num: </string>
    <string name="face_num_result_btn">enableFaceDetect</string>
</resources>