<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_face_detect_result"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/face_num"
        android:gravity="left"
        android:textSize="20dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </TextView>

    <Button
        android:id="@+id/button_enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_extension"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/button_init"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_extension"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/button_composers"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_composers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_composer"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/button_stickers"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_stickers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_sticker"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/button_face_num_result"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_face_num_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/face_num_result_btn"
        android:textAllCaps="false"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
